--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,8 @@
             </article>
             <hr>
             <article class="main__article contact">
-                <h2 class="contact__h2">Our Contact Form</h2>
-                <form action="https://httpbin.org/get" method="get" class="contact__form">
+                <h2 id="contactH2" class="contact__h2">Our Contact Form</h2>
+                <form id="contactForm" class="contact__form" onsubmit="formBehavior(); return false">
                     <fieldset class="contact__fieldset">
                         <legend class="offscreen">Send Us A Message</legend>
                         <p class="contact__p">
